omni/tests/goldens/types/unknown_type_18.err
tests/goldens/types/unknown_type_18.omni:1:13: error: unknown type "Mystery18"
  let value18:Mystery18 = 1
              ^~~ hint: import or declare the type before use
tests/goldens/types/unknown_type_18.omni:1:1: error: cannot assign int to Mystery18
  let value18:Mystery18 = 1
  ^~~ hint: convert the expression to Mystery18 or change the variable type to int
