omni/tests/goldens/types/unknown_type_18.omni
let value18:Mystery18 = 1
